// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";
//option objc_class_prefix = "HLW";

package limiter;

// The rate limiter service definition.
service RateLimiter {
  //create a limiter 
  rpc Create (CreateRequest) returns (CreateReply) {}
  //get limiter permits
  rpc GetRate (GetRateRequest) returns (GetRateReply) {}
  //acquire a token block in timeout
  rpc Acquire (AcquireRequest) returns (AcquireReply) {}
  //acquire a token at once
  rpc TryAcquire (TryAcquireRequest) returns (TryAcquireReply) {}
}

message CreateRequest {
  string alias = 1;
  int32 permits = 2;
}

message CreateReply {
  bool ret = 1;
}

message GetRateRequest {
  string alias = 1;
}

message GetRateReply {
  bool ret = 1;
  int32 permits = 2;
}

message AcquireRequest {
  string alias = 1;
  int32 timeout = 2;
}

message AcquireReply {
  bool ret = 1;
}

message TryAcquireRequest {
  string alias = 1;
}

message TryAcquireReply {
  bool ret = 1;
}
